refetch추가 및 react-helmet 라이브러리 추가해서 아이콘과 title변경 구현

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.50.1",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34"
   }
